@@ -4,8 +4,7 @@ wxbRestorePanel : Allow the user to choose where he wants to restore his files
 
 wxbRestorePanel : Add a button to force the refreshing of the whole tree
 
-wxbPanel/wxbMainFrame : Add a locking function (for example, deny the user 
-               to type something in the console when a restore is in progress)
+wxbRestorePanel : Add a timeout when waiting for commands results
 
 wxbRestorePanel : Check more carefully which job we just have run.
 
